--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
    <h1>Obrigada por confirmar seu e-mail!</h1>
 <p>selecione a opção que melhor te atende no formuláio abaixo para receber o simulado e conteúdos personalizados</p>
-    
+    <!-- Formulário do Google do Rd incorporado -->
+     <div id="rd-form-ABC123"></div>
+     <div role="main" id="tipo-de-plano-176ff9ef0f65132f5b99"></div><script type="text/javascript" src="https://d335luupugsy2.cloudfront.net/js/rdstation-forms/stable/rdstation-forms.min.js"></script><script type="text/javascript"> new RDStationForms('tipo-de-plano-176ff9ef0f65132f5b99', 'null').createForm();</script>
+
+
 </body>
 </html>
