--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>GitHub Pages OK</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Landing Page</title>
 </head>
+
 <body>
-  <h1>Funcionando ✅</h1>
+  <h1>Obrigada por confirmar seu e-mail!</h1>
+  <p>
+    Selecione a opção que melhor te atende no formulário abaixo para receber o
+    simulado e conteúdos personalizados.
+  </p>
+
+  <!-- RD Station Form -->
+  <div role="main" id="tipo-de-plano-176ff9ef0f65132f5b99"></div>
+
+  <script
+    type="text/javascript"
+    src="https://d335luupugsy2.cloudfront.net/js/rdstation-forms/stable/rdstation-forms.min.js"
+  ></script>
+
+  <script type="text/javascript">
+    // mudei o script 'null'
+    new RDStationForms('tipo-de-plano-176ff9ef0f65132f5b99', null).createForm();
+  </script>
 </body>
 </html>
