--- a/index.html
+++ b/index.html
@@ -8,18 +8,38 @@
 
 <body>
   <h1>Obrigada por confirmar seu e-mail!</h1>
-  <p>
-    Selecione a opção que melhor te atende no formulário abaixo para receber o
-    simulado e conteúdos personalizados.
-  </p>
+  <p>preencha o campo e-mail e clique para ir direto pro simulado</p>
 
-  <!-- RD Station Form -->
+  <!-- RD Station Form 
   
   </script>
   <div role="main" id="tipo-de-plano-176ff9ef0f65132f5b99"></div>
   <script type="text/javascript" 
   src="https://d335luupugsy2.cloudfront.net/js/rdstation-forms/stable/rdstation-forms.min.js"></script>
   <script type="text/javascript"> new RDStationForms('tipo-de-plano-176ff9ef0f65132f5b99', null).createForm();</script>
+
+-->
+ <hr style="margin:40px 0">
+
+<h3>📩 Receber meu resultado do simulado</h3>
+<p>Informe seu e-mail para acessar o simulado e receber conteúdos personalizados.</p>
+
+<form id="form-simulador">
+  <input
+    type="email"
+    id="emailSimulador"
+    placeholder="seu@email.com"
+    required
+    style="padding:10px; width:280px; max-width:100%;"
+  />
+
+  <br><br>
+
+  <button type="submit" style="padding:10px 18px; cursor:pointer;">
+    👉 Acessar o simulado
+  </button>
+</form>
+
 
   <!--webhook N8N-->
  <script>
@@ -34,6 +54,22 @@
       body: JSON.stringify({ email })
     });
   }
+</script>
+<script>
+  document
+    .getElementById('form-simulador')
+    .addEventListener('submit', function (e) {
+      e.preventDefault();
+
+      const email = document.getElementById('emailSimulador').value;
+
+      if (!email) return;
+
+      // redireciona para a página do simulado
+      window.location.href =
+        'https://fabiola-fofs.github.io/simuladoPage/?email=' +
+        encodeURIComponent(email);
+    });
 </script>
 </body>
 </html>
