colocando prints e descrevendo melhor alguns processos

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <h1>Obrigada por confirmar seu e-mail!</h1>
   <p>Preencha o campo abaixo para acessar diretamente o simulado.</p>
 
-  <!-- RD Station (desativado / apenas referência visual)
-  <div role="main" id="tipo-de-plano-176ff9ef0f65132f5b99"></div>
+   <!--RD Station (desativado / apenas referência visual- ia usar no plano de captar pelo RD)-->
+  <!--<div role="main" id="tipo-de-plano-176ff9ef0f65132f5b99"></div>
   <script src="https://d335luupugsy2.cloudfront.net/js/rdstation-forms/stable/rdstation-forms.min.js"></script>
   <script>
     new RDStationForms('tipo-de-plano-176ff9ef0f65132f5b99', null).createForm();
   </script>
-  -->
+-->
 
   <hr style="margin:40px 0">
 
